# oop-lab2

./: .gitignore  build.sh
src/: CMakeLists.txt  application.cpp  application.hpp  competition_results.cpp  competition_results.hpp  competition_results_serializer.cpp  competition_results_serializer.hpp  csv_parser.cpp  csv_parser.hpp  file_finder.cpp  file_finder.hpp  file_reader.cpp  file_reader.hpp  main.cpp  main.hpp  points_counter.cpp  points_counter.hpp  table.cpp  table.hpp  voting_results_deserializer.cpp  voting_results_deserializer.hpp
